--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="">About</a></li>
                 <li><a href=>Contact Us</a></li>
                 <li><a href="">Our Services</a></li>
+                <li><a href="">Blog</a></li>
             </ul>
             <div class="icons">
                 <i class="fa-solid fa-bars"></i>
